# LeNet-5

./: LICENSE  README.md
2201213045-ZiyangYe-homework/CNN_CPU/src/: CMakeLists.txt  cnn.h  cnn_G.h  forward_GPU.cpp  forward_avx.cpp  forward_avx_openmp.cpp  opencl_operations.cpp
2201213045-ZiyangYe-homework/CNN_GPU/src/: CMakeLists.txt  backward.cpp  cnn.cpp  cnn.h  forward.cpp  init.cpp  main.cpp  predict.cpp  train.cpp
__MACOSX/2201213045-ZiyangYe-homework/CNN_GPU/src/: ._init.cpp  ._main.cpp
